--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="C:/adt-studio-windows/sdk/extras/google/admob_ads_sdk/GoogleAdMobAdsSdk-6.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/adt-studio-windows/sdk/extras/google/analytics_sdk_v2/libGoogleAnalyticsV2.jar"/>
+	<classpathentry kind="lib" path="C:/adt-studio-windows/sdk/add-ons/addon-google_apis-google-19/libs/effects.jar"/>
+	<classpathentry kind="lib" path="C:/adt-studio-windows/sdk/add-ons/addon-google_apis-google-19/libs/maps.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
